# GImS

./: .gitignore  CMakeLists.txt  vcpkg.json
Assignments/: CMakeLists.txt
Assignments/A0MeshViewer/: CMakeLists.txt
Assignments/A0MeshViewer/include/: TriangleApp.h
Assignments/A0MeshViewer/shaders/: TriangleMesh.hlsl
Assignments/A0MeshViewer/src/: TriangleApp.cpp  main.cpp
Assignments/A0MeshViewer/test/: tests.cpp
Assignments/A1SceneGraphViewer/: CMakeLists.txt
Assignments/A1SceneGraphViewer/doc/: GImSLab_AssimpViewer.docx
Assignments/A1SceneGraphViewer/include/: AABB.hpp  ConstantBufferD3D12.hpp  Scene.hpp  SceneFactory.hpp  SceneGraphViewerApp.hpp  Texture2DD3D12.hpp  TriangleMeshD3D12.hpp
Assignments/A1SceneGraphViewer/shaders/: TriangleMesh.hlsl
Assignments/A1SceneGraphViewer/src/: AABB.cpp  ConstantBufferD3D12.cpp  Scene.cpp  SceneFactory.cpp  SceneGraphViewerApp.cpp  Texture2DD3D12.cpp  TriangleMeshD3D12.cpp  main.cpp
Project/: CMakeLists.txt
Project/P0TessellationExample/: CMakeLists.txt
Project/P0TessellationExample/include/: PatchApp.h  TriangleApp.h
Project/P0TessellationExample/shaders/: QuadPatch.hlsl  TriangleMesh.hlsl  TrianglePatch.hlsl
Project/P0TessellationExample/src/: PatchApp.cpp  TriangleApp.cpp  main.cpp
Project/P1BezierPatch/: CMakeLists.txt
Project/P1BezierPatch/include/: BezierPatchD3D12.h  MorbiusStrip.h  PatchApp.h
Project/P1BezierPatch/shaders/: BezierPatch.hlsl
Project/P1BezierPatch/src/: BezierPatchD3D12.cpp  PatchApp.cpp
Project/P2NURBSExample/: CMakeLists.txt
Project/P2NURBSExample/doc/: GImSLab01.docx
Project/P2NURBSExample/include/: MorbiusStrip.h  NURBSPatchD3D12.h  PatchApp.h  Teapot.h  UnitCircle.h
Project/P2NURBSExample/shaders/: NURBSPatch.hlsl
Project/P2NURBSExample/src/: NURBSPatchD3D12.cpp  PatchApp.cpp  main.cpp
Tutorials/: CMakeLists.txt
Tutorials/T0GLM/: CMakeLists.txt
Tutorials/T13TwoTexturesTwoTables/: CMakeLists.txt
Tutorials/T13TwoTexturesTwoTables/shaders/: TwoTextures.hlsl
Tutorials/T13TwoTexturesTwoTables/src/: TwoTexturesTwoTablesApp.cpp
Tutorials/T1BasicFramework/: CMakeLists.txt
Tutorials/T1BasicFramework/src/: BasicFrameWork.cpp
Tutorials/T2Triangle/: CMakeLists.txt
Tutorials/T2Triangle/src/: TriangleApp.cpp
Tutorials/T3TwoTriangles/: CMakeLists.txt
Tutorials/T3TwoTriangles/src/: TwoTrianglesApp.cpp
Tutorials/T4Ellipsis/: CMakeLists.txt
Tutorials/T4Ellipsis/src/: EllipsisApp.cpp
Tutorials/T5RootConstant/: CMakeLists.txt
Tutorials/T5RootConstant/shaders/: RootConstant.hlsl
Tutorials/T5RootConstant/src/: RootConstantApp.cpp
Tutorials/T6RootConstantBuffer/: CMakeLists.txt
Tutorials/T6RootConstantBuffer/shaders/: RootConstantBuffer.hlsl
Tutorials/T6RootConstantBuffer/src/: RootConstantBufferApp.cpp
Tutorials/T7ConstantBuffer/: CMakeLists.txt
Tutorials/T7ConstantBuffer/src/: ConstantBufferApp.cpp
Tutorials/T7Texture/: CMakeLists.txt
Tutorials/T7Texture/src/: TextureApp.cpp
Tutorials/T8TwoConstantBuffers/: CMakeLists.txt
Tutorials/T8TwoConstantBuffers/src/: TwoConstantBuffersApp.cpp
Tutorials/T8VertexBuffer/: CMakeLists.txt
Tutorials/T8VertexBuffer/shaders/: VertexBuffer.hlsl
Tutorials/T8VertexBuffer/src/: VertexBufferApp.cpp
Tutorials/T9VertexIndexBuffer/: CMakeLists.txt
Tutorials/T9VertexIndexBuffer/src/: VertexIndexBufferApp.cpp
data/sponza/: copyright.txt  sponza.mtl
gimslib/: CMakeLists.txt
gimslib/include/gimslib/contrib/d3dx12/: d3dx12.h
gimslib/include/gimslib/d3d/: DX12App.hpp  HLSLProgram.hpp  UploadHelper.hpp
gimslib/src/gimslib/d3d/: DX12App.cpp  HLSLProgram.cpp  UploadHelper.cpp
gimslib/src/gimslib/d3d/impl/: SwapChainAdapter.cpp  SwapChainAdapter.hpp
gimslib/test/: tests.cpp
gimslib/test/constexpr/: constexpr_tests.cpp
