add_subdirectory(./T0GLM)
add_subdirectory(./T1BasicFramework)
add_subdirectory(./T2Triangle)
add_subdirectory(./T3TwoTriangles)
add_subdirectory(./T4Ellipsis)
add_subdirectory(./T5RootConstant)
add_subdirectory(./T6RootConstantBuffer)
add_subdirectory(./T7ConstantBuffer)
add_subdirectory(./T8TwoConstantBuffers)
add_subdirectory(./T7Texture)
add_subdirectory(./T8VertexBuffer)
add_subdirectory(./T9VertexIndexBuffer)
add_subdirectory(./T13TwoTexturesTwoTables)

